# RobotRepo

./: CMakeLists.txt
controller/: CMakeLists.txt  controller.cpp  controller.hpp  testControllerClass.cpp
hook/: CMakeLists.txt  hookTest.cpp
micro/: pinMap
micro/Serial_Motor_Driver/: Serial_Motor_Driver.ino
platform/: CMakeLists.txt  platformTest.cpp
serial/: CMakeLists.txt  serial.cpp  serial.hpp
stateMachine/: CMakeLists.txt  stateMachineTest.cpp  stateMachineTest.hpp
tests/: CMakeLists.txt
tests/cameraBoom/: CMakeLists.txt  cameraBoomTest.cpp
tests/deploy/: CMakeLists.txt  deployTest.cpp
tests/hook/: hookTest.cpp
tests/log/: CMakeLists.txt  logTest.cpp
tests/pingSpeed/: CMakeLists.txt  pingSpeed.cpp  statusCheck.cpp
tests/platform/: CMakeLists.txt  platformPositionTest.cpp  platformTest.cpp
tests/pusher/: CMakeLists.txt  pusherTest.cpp
tests/trim/: trimTest.cpp
tests/voltage/: CMakeLists.txt  voltageTest.cpp
wallFollow/: CMakeLists.txt  wallFollow.cpp  waveCount.cpp
